Update selection of resolution policy for screen capture with getUserMedia.

The intent of the new algorithm is to allow resolution adjustment if the
resolution range allowed by constraints is a superset of the capabilities.
However, the actual capabilities are not currently known and, in practice,
resolution adjustment was allowed only when no constraints were specified.

This CL relaxes this rule to allow resolution adjustment by treating a max
constraint as if it were the actual capability. This should be updated so
that the actual native screen resolution is used as capability, but, in the
meantime, this fix is more compatible with existing applications that expect
the behavior of the old algorithm. Moreover, this patch does not affect spec
compliance since screen-resolution policies are not regulated by the spec as
long as the output resolution is within the constrained range.

BUG=709915

Review-Url: https://codereview.chromium.org/2800343005
Cr-Commit-Position: refs/heads/master@{#463309}

Former-commit-id: 71ffa0d2e073d09d8098b0794f7f382655aabedc